# crabapple

./: Cargo.toml  README.md  engine prompt.txt
.github/workflows/: release.yml  test.yml
src/: error.rs  lib.rs
src/backup/: crypto.rs  device.rs  manifest_db.rs  mod.rs  types.rs  util.rs
src/backup/models/: auth.rs  file.rs  keyring.rs  manifest_db.rs  mod.rs
src/backup/models/manifest/: app.rs  lockdown.rs  manifest_plist.rs  mod.rs
src/backup/models/manifest_data/: database.rs  lockdown.rs  manifest.rs  mod.rs
src/backup/util/: hex.rs  mod.rs  plist.rs  tlv.rs
