[package]
authors = ["Christopher Sardegna <imessage@reagentx.net>"]
name = "crabapple"
version = "0.0.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "A library for iOS backup decryption and encryption"
exclude = [".github", "resources"]
readme = "README.md"
repository = "https://github.com/ReagentX/crabapple"
keywords = ["ios", "cryptography", "backup"]
categories = ["cryptography", "security", "database"]

[dependencies]
aes = "0.9.1"
plist = "1.9.0"
aes-kw = "0.3.1"
pbkdf2 = { version = "0.13.0", features = ["hmac"] }
rusqlite = { version = "0.40.0", features = ["bundled", "blob"] }
cbc = "0.2.1"
sha1 = "0.11.0"
sha2 = "0.11.0"
